# mlops-git-exercise

./: README.md  main.py  pyproject.toml
src/mlops_github/: __init__.py  main.py
tests/: test_main.py
