[project]
name = "mlops-github"
version = "0.1.0"
description = "A Python project scaffolded in the MLOPS_GITHUB workspace."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://example.com"

[project.scripts]
mlops-github = "mlops_github.main:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"